# nameavail

./: DESIGN.md  README.md  pyproject.toml
nameavail/: __main__.py  cli.py  formatters.py
nameavail/checks/: __init__.py  crates.py  domain.py  github.py  http.py  npm.py  pypi.py
tests/: test_checks.py  test_cli.py  test_formatters.py  test_integration.py
tests/test-specs/: test_checks.md  test_cli.md  test_formatters.md  test_integration.md
