[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nameavail"
version = "0.1.0"
description = "Check whether a project name is available across PyPI, GitHub, and domains"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[project.scripts]
nameavail = "nameavail.__main__:main"

[tool.pytest.ini_options]
markers = [
    "integration: hits real APIs (deselect with '-m not integration')",
]
